kubernetes/apps/security/kguardian/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kguardian
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: kguardian
    gethomepage.dev/description: Network & compute observability
    gethomepage.dev/group: Security
    gethomepage.dev/icon: mdi-shield-search
spec:
  hostnames:
    - kguardian.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: kguardian-frontend
          port: 5173
